--- a/09-consumo-de-api-rest-com-axios/mini-projeto/01-consumo-de-api/index.html
+++ b/09-consumo-de-api-rest-com-axios/mini-projeto/01-consumo-de-api/index.html
@@ -10,6 +10,25 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
+	<!-- As a link -->
+	<nav class="navbar navbar-dark bg-dark">
+	  <a class="navbar-brand" href="#">Home</a>
+		<form class="form-inline" name="form-login">
+	    <div class="input-group mr-2">
+	      <div class="input-group-prepend">
+	        <span class="input-group-text" id="basic-addon1">@</span>
+	      </div>
+	      <input type="email" name="ipt-email" class="form-control" placeholder="Email">
+	    </div>
+			<div class="input-group mr-2">
+	      <div class="input-group-prepend">
+	        <span class="input-group-text" id="basic-addon1">#</span>
+	      </div>
+	      <input type="password" name="ipt-password" class="form-control" placeholder="Password">
+	    </div>
+			<button type="button" id="btn-login" class="btn btn-outline-primary">Login</button>
+	  </form>
+	</nav>
 	<div class="container">
 		<div class="row">
 			<div class="col">
