Finalizado sistema de login, onde armazenamos o token dentro do localStorage do navegador do usuario.

--- a/09-consumo-de-api-rest-com-axios/mini-projeto/01-consumo-de-api/index.html
+++ b/09-consumo-de-api-rest-com-axios/mini-projeto/01-consumo-de-api/index.html
@@ -24,7 +24,7 @@
 	      <div class="input-group-prepend">
 	        <span class="input-group-text" id="basic-addon1">#</span>
 	      </div>
-	      <input type="password" name="ipt-password" class="form-control" placeholder="Password">
+	      <input type="password" name="ipt-password" class="form-control" placeholder="Senha">
 	    </div>
 			<button type="button" id="btn-login" class="btn btn-outline-primary">Login</button>
 	  </form>
